Development Portal (2020-04-15 shi)
==============================
Check if sector code has narrative if non-dac
Display percentage complete for activity dates on hover
Add empty description for policy marker significance
Update css
Display location @srsName as a link when found
Update participating-org column layout


Development Portal (2020-04-14 shi)
==============================
Update glossary for search
Update placeholder text for activity list query
Display rows when only result period and no value is found
Update css for fullwidth search filters
Update dquery css


Development Portal (2020-04-12 shi)
==============================
Display codes for transaction attributes
Update css


Development Portal (2020-04-12 shi)
==============================
Update glossary for search
Add trending search buttons
Update css
Add keyword search to filters
Update all translations


Development Portal (2020-04-11 shi)
==============================
Display array for default-aid-type
Fix layout legibility for result indicator reference
Fix layout legibility for receiver and provider columns in tables
Update placeholder text for total commitment search dropdown


Development Portal (2020-04-08 shi)
==============================
Add print-friendly css for new SAVi
Fix typo for @activity-id in participating-org
Fix urls for @ref
Display name element for org files


Development Portal (2020-04-04 shi)
==============================
Update crs-add section for new SAVi
Display table when loan-status elements are available
CSS changes


Development Portal (2020-04-03 shi)
==============================
Update policy marker and tag conditions
Display as url to tag vocab when available
CSS changes
Update layout display for result indicators
Update new SAVi element column widths
Move tag and policy-marker further up
Remove link for owner-org id


Development Portal (2020-04-02 shi)
==============================
Display policy marker narrative if vocab 99