@@ -124,9 +124,12 @@ span.count				{color:#ccc; font-size:12px; padding-left:10px;}
 .wrap_sector span.count	{color:#444; font-weight:normal; padding-left:5px;}
 .wrap_transaction,
 .wrap_result			{position:relative;}
-.wrap_length			{position:absolute; top:10px; right:-20px; font-size:10px; color:#ddd;}
-.wrap_result .wrap_length	{right:20px;}
-.wrap_length span.count	{padding:0 15px 0 5px; font-size:10px;}
+.wrap_length			{position:absolute; top:10px; right:-20px; font-size:10px; color:#ddd; text-align:right; max-width:650px;}
+.wrap_length span.count	{padding:0 0 0 5px; font-size:10px;}
+.wrap_result .wrap_length	{right:20px; max-width:350px;}
+.wrap_length			{display:flex; flex-wrap:wrap; width:100%;}
+.length					{flex-grow:1; flex-basis:auto;}
+
 
 /*	DOCUMENTS	*/
 a.doc_link:before		{display:inline-block; vertical-align:top; content:"☰"; border:1px solid #CCC; padding:2px; color:#CCC; margin-right:-24px;}
