@@ -615,15 +615,15 @@
 	
 <!--	RESULT LENGTH	-->
 #^result-1-length
-output<span class="count">( {_it./result-1.length||no_length} )</span> 
+<div class="length">output<span class="count">( {_it./result-1.length||no_length} )</span></div>
 #^result-2-length
-outcome<span class="count">( {_it./result-2.length||no_length} )</span> 
+<div class="length">outcome<span class="count">( {_it./result-2.length||no_length} )</span></div> 
 #^result-3-length
-impact<span class="count">( {_it./result-3.length||no_length} )</span> 
+<div class="length">impact<span class="count">( {_it./result-3.length||no_length} )</span></div>
 #^result-9-length
-other<span class="count">( {_it./result-9.length||no_length} )</span>
+<div class="length">other<span class="count">( {_it./result-9.length||no_length} )</span></div>
 #^indicator-length
-indicator<span class="count">( {_it./indicator.length||no_length} )</span>
+<div class="length">indicator<span class="count">( {_it./indicator.length||no_length} )</span></div>
 
 <!--	GLOSSARY DESCRIPTIONS	-->
 #^/result_type_description
@@ -947,35 +947,35 @@ indicator<span class="count">( {_it./indicator.length||no_length} )</span>
 	
 <!--	RESULT LENGTH	-->
 #^transaction-1-length
-Incoming Funds <span class="count">( {_it./transaction-1.length||no_length} )</span> 
+<div class="length">Incoming Funds <span class="count">( {_it./transaction-1.length||no_length} )</span></div>
 #^transaction-2-length
-Outgoing Commitment <span class="count">( {_it./transaction-2.length||no_length} )</span>
+<div class="length">Outgoing Commitment <span class="count">( {_it./transaction-2.length||no_length} )</span></div>
 #^transaction-3-length
-Disbursement <span class="count">( {_it./transaction-3.length||no_length} )</span>
+<div class="length">Disbursement <span class="count">( {_it./transaction-3.length||no_length} )</span></div>
 #^transaction-4-length
-Expenditure <span class="count">( {_it./transaction-4.length||no_length} )</span>
+<div class="length">Expenditure <span class="count">( {_it./transaction-4.length||no_length} )</span></div>
 #^transaction-5-length
-Interest Payment <span class="count">( {_it./transaction-5.length||no_length} )</span>
+<div class="length">Interest Payment <span class="count">( {_it./transaction-5.length||no_length} )</span></div>
 #^transaction-6-length
-Loan Repayment <span class="count">( {_it./transaction-6.length||no_length} )</span>
+<div class="length">Loan Repayment <span class="count">( {_it./transaction-6.length||no_length} )</span></div>
 #^transaction-7-length
-Reimbursement <span class="count">( {_it./transaction-7.length||no_length} )</span>
+<div class="length">Reimbursement <span class="count">( {_it./transaction-7.length||no_length} )</span></div>
 #^transaction-8-length
-Purchase of Equity <span class="count">( {_it./transaction-8.length||no_length} )</span>
+<div class="length">Purchase of Equity <span class="count">( {_it./transaction-8.length||no_length} )</span></div>
 #^transaction-9-length
-Sale of Equity <span class="count">( {_it./transaction-9.length||no_length} )</span>
+<div class="length">Sale of Equity <span class="count">( {_it./transaction-9.length||no_length} )</span></div>
 #^transaction-10-length
-Credit Guarantee <span class="count">( {_it./transaction-10.length||no_length} )</span>
+<div class="length">Credit Guarantee <span class="count">( {_it./transaction-10.length||no_length} )</span></div>
 #^transaction-11-length
-Incoming Commitment <span class="count">( {_it./transaction-11.length||no_length} )</span>
+<div class="length">Incoming Commitment <span class="count">( {_it./transaction-11.length||no_length} )</span></div>
 #^transaction-12-length
-Outgoing Pledge <span class="count">( {_it./transaction-12.length||no_length} )</span>
+<div class="length">Outgoing Pledge <span class="count">( {_it./transaction-12.length||no_length} )</span></div>
 #^transaction-13-length
-Incoming Pledge <span class="count">( {_it./transaction-13.length||no_length} )</span>
+<div class="length">Incoming Pledge <span class="count">( {_it./transaction-13.length||no_length} )</span></div>
 #^transaction-14-length
-Planned Disbursement <span class="count">( {_it./planned-disbursement.length||no_length} )</span>
+<div class="length">Planned Disbursement <span class="count">( {_it./planned-disbursement.length||no_length} )</span></div>
 #^transaction-15-length
-Budget <span class="count">( {_it./budget.length||no_length} )</span>
+<div class="length">Budget <span class="count">( {_it./budget.length||no_length} )</span></div>
 
 #^transaction-chart	<!--	TRANSACTION CHART	-->	
 <div class="showchart">
