@@ -6,6 +6,7 @@ Add empty description for policy marker significance
 Update css
 Display location @srsName as a link when found
 Update participating-org column layout
+Update length to flex so it lays out nicely
 
 
 Development Portal (2020-04-14 shi)
